--- a/dev.html
+++ b/dev.html
@@ -136,7 +136,7 @@ animation: AnimationName 12s ease infinite;">
         <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Intuitive Navigation Bar with SCSS</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
                 <p>The original concept of this portfolio is to have a simple yet intuitive interface. So instead of
                     having a static permanent header, i instead opt to implement a revealing side navigation bar with a
                     'burger' menu that intuitively changes to a 'cross' when the navigation bar is revealed.</p>
@@ -148,15 +148,15 @@ animation: AnimationName 12s ease infinite;">
                     the burger menu so i've had learnt on how to use SCSS from this exercise which is very useful.</p>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">I managed to learn SCSS within a week after asking Erik
+                    <div class="plus-minus-toggle"></div>
+                    <p style="display: block;font-style: italic;">I managed to learn SCSS within a week after asking Erik
                         of its
-                        functionality and i find its added funtionality to be a very useful tool .</p>
+                        functionality and i find its features(such being able to define variables, importing additional CSS, and other) to be very useful.</p>
                 </div>
             </article>
         </section>
         <br /><br />
-        <section id="content">
+        <!--<section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Hide & Reveal Next Element</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
@@ -196,7 +196,7 @@ function toggleDocs(event) {
                     </div>
             </article>
         </section>
-        <br /><br />
+        <br /><br />-->
         <section id="content">
             <article>
                 <h2 style="font-size: 40px;margin-bottom: 0;">Responsive Web Design</h2>
@@ -260,7 +260,7 @@ function toggleDocs(event) {
                     </video>
                     <br /><br />-->
                     <a class="btn" href="interactiveVisual.html">Link to the interactive
-                        visual.</a>
+                        visual</a>
                 </div>
                 <p>In this article i will describe in detail of the steps i took to create this ThreeJS interactive
                     visual.</p>
@@ -364,7 +364,7 @@ objArray.push(meshes);
                 </div>
                 <br />
                 <h2>5. Animation based on the 'Golden Ratio'</h2>
-                <div class="contentPlaceholderHidden"><img style="width: 75%;height: auto;" class="contentAttachment"
+                <div class="contentPlaceholderHidden"><img style="width: 85%;height: auto;" class="contentAttachment"
                         src="content/1200px-Fibonacci_spiral_34.svg.png" alt="Missing file"></div>
                 <p>The goal i had in mind is to make the objects move(in
                     rotation) with some
