--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ animation: AnimationName 12s ease infinite;">
             <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
             <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
         </section>
-        <!--<article>
+        <!--<section id="content">
+            <article>
             <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
             <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
             <p></p>Lorem ipsum dolor sit amet.</p>
@@ -56,7 +57,8 @@ animation: AnimationName 12s ease infinite;">
                 <div class="plus-minus-toggle collapsed"></div>
                 <p style="display: none;font-style: italic;">No feedback provided yet.</p>
             </div>
-        </article>-->
+        </article>
+    </section>-->
     </div>
 
     <!-- Off-canvas menu -->
