--- a/ptm.html
+++ b/ptm.html
@@ -112,24 +112,24 @@ animation: AnimationName 12s ease infinite;">
                 <h2>Aisha’s Quest Product Execution</h2>
                 <p>Below we show the links and the steps to follow for our current product.
 
-                    First, the user gets the code encrypted in our video. Which later brings him to this instagram
-                    account: <a
-                        href="https://www.instagram.com/aishazoektocht/">https://www.instagram.com/aishazoektocht/</a>
+                    First, the user gets the code encrypted in our video. Which later brings them to this instagram
+                    account: <br /><div class="contentPlaceholderHidden"><a class="btn"
+                        href="https://www.instagram.com/aishazoektocht/">https://www.instagram.com/aishazoektocht/</a></div>
                 </p>
                 <img class="contentAttachment" src="content/oq1.png"></img>
                 <p>Then, if the user is able to figure out the link that is hidden in the instagram posts, the user will
-                    get redirected to this website: <a
-                        href="http://www.aisha9987.c1.biz/X568/">http://www.aisha9987.c1.biz/X568/</a></p>
+                    get redirected to this website: <br /><div class="contentPlaceholderHidden"><a class="btn"
+                        href="http://www.aisha9987.c1.biz/X568/">http://www.aisha9987.c1.biz/X568/</a></div></p>
                 <img class="contentAttachment" src="content/oq2.png"></img>
                 <p>Afterwards, the user has to fill in a password to get to the next part of the Online Quest.
                     If the user fills in the password “beschermd”, the user will get redirected to another part of the
-                    Online Quest, a YouTube video: <a
-                        href="https://www.youtube.com/watch?v=WrfrC2MousY">https://www.youtube.com/watch?v=WrfrC2MousY</a>
+                    Online Quest, a YouTube video: <br /><div class="contentPlaceholderHidden"><a class="btn"
+                        href="https://www.youtube.com/watch?v=WrfrC2MousY">https://www.youtube.com/watch?v=WrfrC2MousY</a></div>
                 </p>
                 <img class="contentAttachment" src="content/oq3.png"></img>
                 <p>In this video, the user has to figure out the hidden message. The hidden message is a link to another
-                    subsite of the earlier website: <a
-                        href="http://www.aisha9987.c1.biz/C249/">http://www.aisha9987.c1.biz/C249/</a></p>
+                    subsite of the earlier website: <br /><div class="contentPlaceholderHidden"><a class="btn"
+                        href="http://www.aisha9987.c1.biz/C249/">http://www.aisha9987.c1.biz/C249/</a></div></p>
                 <img class="contentAttachment" src="content/oq4.png"></img>
                 <p>At the end, the website is a poster of Aisha. The poster of Aisha is actually a QR-code to the prize
                     of the Quest. If you scan the code you will get redirected to another part of the website containing
