--- a/sco.html
+++ b/sco.html
@@ -56,7 +56,7 @@ animation: AnimationName 12s ease infinite;">
                             triangle</em>,
                         finding the right angle to create drama, and adjusting RAW image file post-shooting to refine
                         the
-                        image. </p>
+                        image. This lessons will prove as an asset for my works in the future.</p>
                     <br />
                     <div class="slideshow-container">
                         <!-- Full-width images with number and caption text -->
@@ -259,7 +259,7 @@ animation: AnimationName 12s ease infinite;">
                     <h2 style="font-style: bold;font-size: 40px;margin-bottom:0px;">Brand-, Market-, and Competitive
                         Analysis
                         </h4>
-                        <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
+                        <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h3>
                         <h2>Brand Analysis</h2>
                         <p>Our client is passionate about her career as an artist regardless her experince as a fresh
                             new
