--- a/ux.html
+++ b/ux.html
@@ -43,7 +43,7 @@ animation: AnimationName 12s ease infinite;">
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div>
         <br />
-
+        
         <div class="contentDivider">
             <h1 id="dividerText">Prototype</h1>
             <section id="content">
@@ -55,11 +55,19 @@ animation: AnimationName 12s ease infinite;">
                         interface should look like. My direction is to make a clean minimalist and presentable looking
                         site
                         with an intuitive interface.</p>
+                    <h2 style="text-align: center;">The 1st Iteration</h2>
                     <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
+                    <p>I did this first iteration in the early stage of the development of this site. This iteration is more like a rough estimation of the foundation of this site.</p><br />
+                    <h2 style="text-align: center;">The 2nd Iteration</h2>
+                    <img class="contentAttachment" src="content/paperProtoPortfolio_iterasi2.png"></img>
+                    <p>In the second iteration, i aim to refine and simplify the interface to give a more <em>presentable</em> outlook of the site. I also added details on how would the colour schemes be and other features.</p>
+                    <h2 style="text-align: center;">The 3rd Iteration</h2>
+                    <img class="contentAttachment" src="content/paperProtoPortfolio_iterasi3.png"></img>
+                    <p>In the third iteration i put further details from the previous iteration as i applied the colour scheme straight unto the prototype to further visualize the would be end product, and to put more context to describe the reasoning behind each design decisions.</p><br />
                     <div class="feedback">
                         <h1>Feedback</h1>
-                        <div class="plus-minus-toggle collapsed"></div>
-                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                        <div class="plus-minus-toggle"></div>
+                        <p style="display: block;font-style: italic;">I have learnt that by making a paper prototype is the fastest way to start realizing an abstract idea although it requires multiple iterations to achieve the most desired result.</p>
                     </div>
                 </article>
             </section>
@@ -73,16 +81,17 @@ animation: AnimationName 12s ease infinite;">
                         tool to visualize an idea or a concept, to describe the context use of a product, and to show
                         the
                         emotional appeal of the product.</p>
-                    <p>In this exercise i have made a simple yet understandable storyboard all drawn straight digitally.
+                    <p>In this exercise i have made a visually strong yet simple and easily-understandable storyboard all drawn straight digitally.
                     </p>
+                    <p>In this storyboard it depicts on how would a reaction of a target audience of the client be when they first discover her song on a music streaming platform that is also complimented with a strong visual album cover. All of the sudden the listener drowns in the melody of the song and got hooked.</p>
                     <img class="contentAttachment" src="content/storyboard.png"></img>
                     <div class="feedback">
                         <h1>Feedback</h1>
-                        <div class="plus-minus-toggle collapsed"></div>
-                        <p style="display: none;font-style: italic;">As feedback from Jo-An the storyboard looks nice
+                        <div class="plus-minus-toggle"></div>
+                        <p style="display: block;font-style: italic;">As feedback from Jo-An the storyboard looks nice
                             and
                             understandable.
-                            I now know that a storyboard can be a useful tool for UX design.</p>
+                            I now know that a storyboard can be a useful tool for UX design as it enable me to visually portray the scenario easily.</p>
                     </div>
                 </article>
             </section>
@@ -107,10 +116,11 @@ animation: AnimationName 12s ease infinite;">
                 </article>
             </section>
             <br /><br />
-            
+
 
         </div>
         <br /><br />
+
         <div class="contentDivider">
             <h1 id="dividerText">Research</h1>
 
@@ -150,7 +160,7 @@ animation: AnimationName 12s ease infinite;">
                 <article id="interview">
                     <h1 style="font-size:40px;margin:0px;">Interview</h1>
                     <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
-                    <h2 style="margin:0px;">Interview Preparation</h2>
+                    <h2 style="margin:0px;">Interview Preparation 1/3</h2>
                     <p></p>
                     <p>The purpose of the interview is to find out the needs of the client's target audience. This can
                         be
@@ -165,11 +175,21 @@ animation: AnimationName 12s ease infinite;">
                         audience is.</p>
                     <!-- <a href="content/Interview Research Form.nl.en.docx">Link to the questionnaire</a> -->
                     <embed src="content/Interview Research Form.nl.en.pdf" type="application/pdf"></embed>
-                    <h2 style="margin:0px;">Interview Result</h2>
-                    <p>Conclusions from the interview reveals:</p>
+                    <br />
+                    <br />
+                    <h2 style="margin:0px;">Interview Result 2/3</h2>
+                    <p>Then we conduct the interview to various people around to gather the data. Attached below is the
+                        result.</p>
+                    <div class="contentPlaceholder" style="text-align: center;"><a class="btn"
+                            href="content/Aisha doelgroep (Antwoorden).pdf">Link to the results</a></div>
+
+                    <br />
+
+                    <h2>Interview Analysis 3/3</h2>
+                    <p>Conclusions from the interview reveals that the client target audience is mainly:</p>
                     <p>•Our client’s target group is predominantly constituted out of women.
                     </p>
-                    <p>•Age ranges between 14–19 years old</p>
+                    <p>•Age ranges between 14–24 years old</p>
                     <p>•We can find this group being active in social media such as Instagram, Snapchat, etc.</p>
 
                     <div class="feedback">
@@ -181,6 +201,7 @@ animation: AnimationName 12s ease infinite;">
             </section>
 
             <br /><br />
+
             <section id="content">
 
                 <article>
@@ -199,20 +220,24 @@ animation: AnimationName 12s ease infinite;">
                     </div>
                 </article>
             </section>
-            <!--<article>
-                <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
-                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
-                <p></p>Lorem ipsum dolor sit amet.</p>
-                <div class="contentAttachment" src="content/ConceptingColor.jpg">
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                </div>
-            </article>-->
+            <nr /><br />
+            <section id="content">
+                <article>
+                    <h2 style="font-size: 40px;margin-bottom:0px;">Card Sorting</h2>
+                    <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
+                    <p></p>Lorem ipsum dolor sit amet.</p>
+                    <div class="contentAttachment" src="content/ConceptingColor.jpg">
+                        <div class="feedback">
+                            <h1>Feedback</h1>
+                            <div class="plus-minus-toggle collapsed"></div>
+                            <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                        </div>
+                </article>
+            </section>
             <br /><br />
         </div>
         <br /><br />
+
 
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
