--- a/sprintX.html
+++ b/sprintX.html
@@ -43,7 +43,8 @@ animation: AnimationName 12s ease infinite;">
                 <!-- <p>As an exercise to sharpen my JavaScript skills. </p> -->
                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
                     accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>-->
-                <p>This was a pet project of mine as i always was interested in creative coding and in Sprint X with the
+                <p style="text-align: center;">The interactive visual provides an immersive dive into an abstract universe featuring the "solar squid" motion sculpture and randomly generated "star" particles.</p>
+                    <p>This was a pet project of mine as i always was interested in creative coding and in Sprint X with the
                     help of Mr. Chris Geene as my mentor, i have
                     managed to finalize and polish this interactive visual art that i made using ThreeJS, a JavaScript
                     3D web
@@ -59,7 +60,7 @@ animation: AnimationName 12s ease infinite;">
                     </video>
                     <br /><br />-->
                     <a class="btn" href="interactiveVisual.html">Link to the interactive
-                        visual.</a>
+                        visual</a>
                 </div>
                 <p>In this article i will describe in detail of the steps i took to create this ThreeJS interactive
                     visual.</p>
