--- a/sprintX.html
+++ b/sprintX.html
@@ -35,20 +35,18 @@ animation: AnimationName 12s ease infinite;">
         <br /><br />
         <section id="content">
             <article>
-                <h2 style="font-size: 40px;margin-bottom: 0;">Interactive Visual Art with ThreeJS</h2>
-
+                <h2 style="font-size: 40px;margin-bottom: 0;text-align: center;">An Interactive Visual Art with ThreeJS
+                </h2>
                 <!-- <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1> -->
 
                 <!-- <p>I've always been intrigued on making web graphics visuals</p> -->
                 <!-- <p>As an exercise to sharpen my JavaScript skills. </p> -->
                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
                     accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>-->
-                <p style="text-align: center;">The interactive visual provides an immersive dive into an abstract universe featuring the "solar squid" motion sculpture and randomly generated "star" particles.</p>
-                    <p>This was a pet project of mine as i always was interested in creative coding and in Sprint X with the
-                    help of Mr. Chris Geene as my mentor, i have
-                    managed to finalize and polish this interactive visual art that i made using ThreeJS, a JavaScript
-                    3D web
-                    graphics library. </p>
+                <h2 style="text-align: center; font-style: italic;">The interactive visual aims to provide an immersive
+                    dive into an abstract universe featuring the "solar squid" motion sculpture and randomly generated
+                    "star" particles.</h2>
+                
                 <!-- <p>As part of the process for me to practice my Javascript skills i decided to make an interactive
                     visual that is <em>now playing</em> on the background of this site by using ThreeJS JavaScript web
                     3D graphics
@@ -62,6 +60,11 @@ animation: AnimationName 12s ease infinite;">
                     <a class="btn" href="interactiveVisual.html">Link to the interactive
                         visual</a>
                 </div>
+                <p>This was a pet project of mine as i always was interested in creative coding and in Sprint X with the
+                    help of Mr. Chris Geene as my mentor, i have
+                    managed to finalize and polish this interactive visual art that i made using ThreeJS, a JavaScript
+                    3D web
+                    graphics library. </p>
                 <p>In this article i will describe in detail of the steps i took to create this ThreeJS interactive
                     visual.</p>
                 <br />
