--- a/ux.html
+++ b/ux.html
@@ -43,47 +43,25 @@ animation: AnimationName 12s ease infinite;">
             <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
         </div>
         <br />
-        
+
         <div class="contentDivider">
             <h1 id="dividerText">Prototype</h1>
             <section id="content">
-                <article>
-
-                    <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
-                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
-                    <p>Before starting development of this portfolio, i need to conceptualize the style and how the
-                        interface should look like. My direction is to make a clean minimalist and presentable looking
-                        site
-                        with an intuitive interface.</p>
-                    <h2 style="text-align: center;">The 1st Iteration</h2>
-                    <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
-                    <p>I did this first iteration in the early stage of the development of this site. This iteration is more like a rough estimation of the foundation of this site.</p><br />
-                    <h2 style="text-align: center;">The 2nd Iteration</h2>
-                    <img class="contentAttachment" src="content/paperProtoPortfolio_iterasi2.png"></img>
-                    <p>In the second iteration, i aim to refine and simplify the interface to give a more <em>presentable</em> outlook of the site. I also added details on how would the colour schemes be and other features.</p>
-                    <h2 style="text-align: center;">The 3rd Iteration</h2>
-                    <img class="contentAttachment" src="content/paperProtoPortfolio_iterasi3.png"></img>
-                    <p>In the third iteration i put further details from the previous iteration as i applied the colour scheme straight unto the prototype to further visualize the would be end product, and to put more context to describe the reasoning behind each design decisions.</p><br />
-                    <div class="feedback">
-                        <h1>Feedback</h1>
-                        <div class="plus-minus-toggle"></div>
-                        <p style="display: block;font-style: italic;">I have learnt that by making a paper prototype is the fastest way to start realizing an abstract idea although it requires multiple iterations to achieve the most desired result.</p>
-                    </div>
-                </article>
-            </section>
-            <br /><br />
-            <section id="content">
                 <article id="storyboard">
                     <h2 style="font-size:40px;margin:0px;">Storyboard</h2>
-                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h3>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
                     <p>A storyboard was originally used for the film industry. In designing user experience it is used
                         as a
                         tool to visualize an idea or a concept, to describe the context use of a product, and to show
                         the
                         emotional appeal of the product.</p>
-                    <p>In this exercise i have made a visually strong yet simple and easily-understandable storyboard all drawn straight digitally.
+                    <p>In this exercise i have made a visually strong yet simple and easily-understandable storyboard
+                        all drawn straight digitally.
                     </p>
-                    <p>In this storyboard it depicts on how would a reaction of a target audience of the client be when they first discover her song on a music streaming platform that is also complimented with a strong visual album cover. All of the sudden the listener drowns in the melody of the song and got hooked.</p>
+                    <p>In this storyboard it depicts on how would a reaction of a target audience of the client be when
+                        they first discover her song on a music streaming platform that is also complimented with a
+                        strong visual album cover. All of the sudden the listener drowns in the melody of the song and
+                        got hooked.</p>
                     <img class="contentAttachment" src="content/storyboard.png"></img>
                     <div class="feedback">
                         <h1>Feedback</h1>
@@ -91,11 +69,44 @@ animation: AnimationName 12s ease infinite;">
                         <p style="display: block;font-style: italic;">As feedback from Jo-An the storyboard looks nice
                             and
                             understandable.
-                            I now know that a storyboard can be a useful tool for UX design as it enable me to visually portray the scenario easily.</p>
+                            I now know that a storyboard can be a useful tool for UX design as it enable me to visually
+                            portray the scenario easily.</p>
                     </div>
                 </article>
             </section>
-
+            <br /><br />
+            <section id="content">
+                <article>
+                    <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h3>
+                    <p>Before starting development of this portfolio, i need to conceptualize the style and how the
+                        interface should look like. My direction is to make a clean minimalist and presentable looking
+                        site
+                        with an intuitive interface.</p>
+                    <h2 style="text-align: center;">The 1st Iteration</h2>
+                    <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
+                    <p>I did this first iteration in the early stage of the development of this site. This iteration is
+                        more like a rough estimation for the foundation of this site.</p><br />
+                    <h2 style="text-align: center;">The 2nd Iteration</h2>
+                    <img class="contentAttachment" src="content/paperProtoPortfolio_iterasi2.png"></img>
+                    <p>In the second iteration, i aim to refine and simplify the interface to give a more
+                        <em>presentable</em> outlook of the site. I also added details on how would the colour schemes
+                        be and other features.</p>
+                    <br />
+                    <h2 style="text-align: center;">The 3rd Iteration</h2>
+                    <img class="contentAttachment" src="content/paperProtoPortfolio_iterasi3.png"></img>
+                    <p>In the third iteration i put further details from the previous iteration as i applied the colour
+                        scheme straight unto the prototype to further visualize the would be end product, and to put
+                        more context to describe the reasoning behind each design decisions.</p><br />
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle"></div>
+                        <p style="display: block;font-style: italic;">I have learnt that by making a paper prototype is
+                            the fastest way to start realizing an abstract idea although it requires multiple iterations
+                            to achieve the most desired result.</p>
+                    </div>
+                </article>
+            </section>
             <br /><br />
 
             <section id="content">
